--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     align-items: center;
     font-family: "Exo 2", Verdana, Geneva, Tahoma, sans-serif;
     font-size: larger;
+    background-color: #D7FDEC;
 }
 
 .bold {
@@ -57,7 +58,7 @@ body {
 }
 
 .buttons {
-    background-color: #555555; 
+    background-color: #523F38; 
     border: none;
     color: white;
     padding: 15px 32px;
@@ -67,10 +68,11 @@ body {
     font-size: 16px;
     cursor: pointer;
     transition-duration: 0.6s;
+    font-family: "Exo 2", Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .buttons:hover {
     background-color: white;
     color: black;
-    border: 2px solid #555555;
+    border: 2px solid #523F38;
   }
